--- a/client/src/styles/_notesMenu.scss
+++ b/client/src/styles/_notesMenu.scss
@@ -11,6 +11,36 @@
   border-left: 2px solid rgba(51, 51, 51, 0.09);
   position: fixed;
   right: 0rem;
+  overflow-y: auto;
+
+  @media (max-width: 1000px) {
+    width: 10rem;
+    gap: 1.5rem;
+  }
+
+  @media (max-width: 480px) {
+    height: calc(100vh - 4rem);
+}
+
+& {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(#0099FF, 0.3) #ffffff;
+}
+
+/* Chrome, Edge, and Safari */
+&::-webkit-scrollbar {
+  width: 16px;
+}
+
+&::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+&::-webkit-scrollbar-thumb {
+  background-color: rgb(234, 247, 255);
+  border-radius: 10px;
+  border: 3px solid #ffffff;
+}
 
   .topCont {
     display: flex;
@@ -18,12 +48,21 @@
     align-items: flex-start;
     gap: 1.25rem;
     align-self: stretch;
+
+    @media (max-width: 1000px) {
+      gap: .5rem;
+  }
+
     .item {
       display: flex;
       padding: 0.25rem 0rem 0.25rem 1.25rem;
       align-items: center;
       gap: 0.75rem;
       align-self: stretch;
+
+      @media (max-width: 1000px) {
+        gap: .5rem;
+    }
 
       p {
         margin: 0;
@@ -32,11 +71,19 @@
         font-size: 1.25rem;
         font-style: normal;
         font-weight: 400;
-        line-height: 93.682%; /* 1.40525rem */
+        line-height: 93.682%;
+        
+        @media (max-width: 1000px) {
+          font-size: .9rem;
+      }
       }
 
       img {
         height: 1.25rem;
+
+        @media (max-width: 1000px) {
+          height: .9rem;
+      }
       }
     }
   }
@@ -47,6 +94,11 @@
     align-items: flex-start;
     gap: 1.5rem;
     align-self: stretch;
+    padding-bottom: 1.75rem;
+
+    @media (max-width: 1000px) {
+      gap: .5rem;
+    }
 
     .myNotes {
       padding-left: 1.25rem;
@@ -57,6 +109,10 @@
       font-style: normal;
       font-weight: 600;
       line-height: 93.682%; /* 1.40525rem */
+      
+      @media (max-width: 1000px) {
+        font-size: .9rem;
+      }
     }
 
     .notesList {
@@ -66,10 +122,22 @@
       align-items: center;
       align-self: stretch;
 
+      
+
       .leftCont {
         display: flex;
         align-items: center;
         gap: 0.75rem;
+
+        @media (max-width: 1000px) {
+          gap: .5rem;
+        }
+
+        span {
+          @media (max-width: 1000px) {
+            font-size: .75rem;
+          }
+        }
 
         p {
           color: #09f;
@@ -82,6 +150,11 @@
           overflow: hidden;
           text-overflow: ellipsis;
           width: 100px;
+
+          @media (max-width: 1000px) {
+            font-size: .9rem;
+            width: 50px;
+          }
         }
       }
 
@@ -89,6 +162,18 @@
         display: flex;
         align-items: center;
         gap: 0.5rem;
+
+        .threeDots {
+          @media (max-width: 1000px) {
+            height: 3px;
+          }
+        }
+
+        .bin {
+          @media (max-width: 1000px) {
+            height: .9rem;
+          }
+        }
       }
     }
   }
